JassToCsMain/Antlr/CS/JassParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from JassParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class JassParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		K_CODE=1, K_HANDLE=2, K_INTEGER=3, K_REAL=4, K_BOOLEAN=5, K_STRING=6, 
		K_TRUE=7, K_FALSE=8, K_NULL=9, K_NOT=10, K_AND=11, K_OR=12, K_FUNCTION=13, 
		K_RETURN=14, K_RETURNS=15, K_EXITWHEN=16, K_LOOP=17, K_ENDLOOP=18, K_ELSEIF=19, 
		K_ELSE=20, K_CALL=21, K_IF=22, K_THEN=23, K_ENDIF=24, K_DEBUG=25, K_SET=26, 
		K_TYPE=27, K_EXTENDS=28, K_GLOBALS=29, K_ENDGLOBALS=30, K_CONSTANT=31, 
		K_NATIVE=32, K_TAKES=33, K_NOTHING=34, K_ENDFUNCTION=35, K_LOCAL=36, K_ARRAY=37, 
		ADD=38, SUB=39, MULT=40, DIV=41, GT=42, LT=43, EQ=44, NEQ=45, GTEQ=46, 
		LTEQ=47, O_BRACK=48, C_BRACK=49, O_PAR=50, C_PAR=51, COMMA=52, ASSIGN=53, 
		DECIMAL=54, OCTAL=55, HEX=56, FOURCC=57, REAL_CONST=58, STRING_CONST=59, 
		ID=60, WS=61, COMMENT=62;
	public const int
		RULE_file = 0, RULE_declr = 1, RULE_typedef = 2, RULE_globals = 3, RULE_globalVarList = 4, 
		RULE_constDeclr = 5, RULE_nativeFunc = 6, RULE_funcDeclr = 7, RULE_paramList = 8, 
		RULE_func = 9, RULE_localVarList = 10, RULE_varDeclr = 11, RULE_statementList = 12, 
		RULE_statement = 13, RULE_set = 14, RULE_call = 15, RULE_args = 16, RULE_ifthenelse = 17, 
		RULE_elseClause = 18, RULE_loop = 19, RULE_exitwhen = 20, RULE_returnStat = 21, 
		RULE_debug = 22, RULE_expr = 23, RULE_funcCall = 24, RULE_arrayRef = 25, 
		RULE_funcRef = 26, RULE_constant = 27, RULE_intConst = 28, RULE_decimal = 29, 
		RULE_hex = 30, RULE_parens = 31, RULE_boolConst = 32, RULE_stringConst = 33, 
		RULE_type = 34, RULE_id = 35;
	public static readonly string[] ruleNames = {
		"file", "declr", "typedef", "globals", "globalVarList", "constDeclr", 
		"nativeFunc", "funcDeclr", "paramList", "func", "localVarList", "varDeclr", 
		"statementList", "statement", "set", "call", "args", "ifthenelse", "elseClause", 
		"loop", "exitwhen", "returnStat", "debug", "expr", "funcCall", "arrayRef", 
		"funcRef", "constant", "intConst", "decimal", "hex", "parens", "boolConst", 
		"stringConst", "type", "id"
	};

	private static readonly string[] _LiteralNames = {
		null, "'code'", "'handle'", "'integer'", "'real'", "'boolean'", "'string'", 
		"'true'", "'false'", "'null'", "'not'", "'and'", "'or'", "'function'", 
		"'return'", "'returns'", "'exitwhen'", "'loop'", "'endloop'", "'elseif'", 
		"'else'", "'call'", "'if'", "'then'", "'endif'", "'debug'", "'set'", "'type'", 
		"'extends'", "'globals'", "'endglobals'", "'constant'", "'native'", "'takes'", 
		"'nothing'", "'endfunction'", "'local'", "'array'", "'+'", "'-'", "'*'", 
		"'/'", "'>'", "'<'", "'=='", "'!='", "'>='", "'<='", "'['", "']'", "'('", 
		"')'", "','", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "K_CODE", "K_HANDLE", "K_INTEGER", "K_REAL", "K_BOOLEAN", "K_STRING", 
		"K_TRUE", "K_FALSE", "K_NULL", "K_NOT", "K_AND", "K_OR", "K_FUNCTION", 
		"K_RETURN", "K_RETURNS", "K_EXITWHEN", "K_LOOP", "K_ENDLOOP", "K_ELSEIF", 
		"K_ELSE", "K_CALL", "K_IF", "K_THEN", "K_ENDIF", "K_DEBUG", "K_SET", "K_TYPE", 
		"K_EXTENDS", "K_GLOBALS", "K_ENDGLOBALS", "K_CONSTANT", "K_NATIVE", "K_TAKES", 
		"K_NOTHING", "K_ENDFUNCTION", "K_LOCAL", "K_ARRAY", "ADD", "SUB", "MULT", 
		"DIV", "GT", "LT", "EQ", "NEQ", "GTEQ", "LTEQ", "O_BRACK", "C_BRACK", 
		"O_PAR", "C_PAR", "COMMA", "ASSIGN", "DECIMAL", "OCTAL", "HEX", "FOURCC", 
		"REAL_CONST", "STRING_CONST", "ID", "WS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "JassParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static JassParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JassParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JassParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		public DeclrContext[] declr() {
			return GetRuleContexts<DeclrContext>();
		}
		public DeclrContext declr(int i) {
			return GetRuleContext<DeclrContext>(i);
		}
		public FuncContext[] func() {
			return GetRuleContexts<FuncContext>();
		}
		public FuncContext func(int i) {
			return GetRuleContext<FuncContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 72; declr();
					}
					} 
				}
				State = 77;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==K_FUNCTION || _la==K_CONSTANT) {
				{
				{
				State = 78; func();
				}
				}
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclrContext : ParserRuleContext {
		public TypedefContext typedef() {
			return GetRuleContext<TypedefContext>(0);
		}
		public GlobalsContext globals() {
			return GetRuleContext<GlobalsContext>(0);
		}
		public NativeFuncContext nativeFunc() {
			return GetRuleContext<NativeFuncContext>(0);
		}
		public DeclrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterDeclr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitDeclr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclrContext declr() {
		DeclrContext _localctx = new DeclrContext(Context, State);
		EnterRule(_localctx, 2, RULE_declr);
		try {
			State = 87;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case K_TYPE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; typedef();
				}
				break;
			case K_GLOBALS:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85; globals();
				}
				break;
			case K_CONSTANT:
			case K_NATIVE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 86; nativeFunc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypedefContext : ParserRuleContext {
		public ITerminalNode K_TYPE() { return GetToken(JassParser.K_TYPE, 0); }
		public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public ITerminalNode K_EXTENDS() { return GetToken(JassParser.K_EXTENDS, 0); }
		public ITerminalNode K_HANDLE() { return GetToken(JassParser.K_HANDLE, 0); }
		public TypedefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typedef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterTypedef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitTypedef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypedef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypedefContext typedef() {
		TypedefContext _localctx = new TypedefContext(Context, State);
		EnterRule(_localctx, 4, RULE_typedef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; Match(K_TYPE);
			State = 90; id();
			State = 91; Match(K_EXTENDS);
			State = 94;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case K_HANDLE:
				{
				State = 92; Match(K_HANDLE);
				}
				break;
			case ID:
				{
				State = 93; id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalsContext : ParserRuleContext {
		public ITerminalNode K_GLOBALS() { return GetToken(JassParser.K_GLOBALS, 0); }
		public GlobalVarListContext globalVarList() {
			return GetRuleContext<GlobalVarListContext>(0);
		}
		public ITerminalNode K_ENDGLOBALS() { return GetToken(JassParser.K_ENDGLOBALS, 0); }
		public GlobalsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globals; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterGlobals(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitGlobals(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobals(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalsContext globals() {
		GlobalsContext _localctx = new GlobalsContext(Context, State);
		EnterRule(_localctx, 6, RULE_globals);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(K_GLOBALS);
			State = 97; globalVarList();
			State = 98; Match(K_ENDGLOBALS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalVarListContext : ParserRuleContext {
		public ConstDeclrContext[] constDeclr() {
			return GetRuleContexts<ConstDeclrContext>();
		}
		public ConstDeclrContext constDeclr(int i) {
			return GetRuleContext<ConstDeclrContext>(i);
		}
		public VarDeclrContext[] varDeclr() {
			return GetRuleContexts<VarDeclrContext>();
		}
		public VarDeclrContext varDeclr(int i) {
			return GetRuleContext<VarDeclrContext>(i);
		}
		public GlobalVarListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalVarList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterGlobalVarList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitGlobalVarList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalVarList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalVarListContext globalVarList() {
		GlobalVarListContext _localctx = new GlobalVarListContext(Context, State);
		EnterRule(_localctx, 8, RULE_globalVarList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_CODE) | (1L << K_HANDLE) | (1L << K_INTEGER) | (1L << K_REAL) | (1L << K_BOOLEAN) | (1L << K_STRING) | (1L << K_CONSTANT) | (1L << ID))) != 0)) {
				{
				State = 102;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case K_CONSTANT:
					{
					State = 100; constDeclr();
					}
					break;
				case K_CODE:
				case K_HANDLE:
				case K_INTEGER:
				case K_REAL:
				case K_BOOLEAN:
				case K_STRING:
				case ID:
					{
					State = 101; varDeclr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstDeclrContext : ParserRuleContext {
		public ITerminalNode K_CONSTANT() { return GetToken(JassParser.K_CONSTANT, 0); }
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(JassParser.ASSIGN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ConstDeclrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constDeclr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterConstDeclr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitConstDeclr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstDeclr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstDeclrContext constDeclr() {
		ConstDeclrContext _localctx = new ConstDeclrContext(Context, State);
		EnterRule(_localctx, 10, RULE_constDeclr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(K_CONSTANT);
			State = 108; type();
			State = 109; id();
			State = 110; Match(ASSIGN);
			State = 111; expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NativeFuncContext : ParserRuleContext {
		public ITerminalNode K_NATIVE() { return GetToken(JassParser.K_NATIVE, 0); }
		public FuncDeclrContext funcDeclr() {
			return GetRuleContext<FuncDeclrContext>(0);
		}
		public ITerminalNode K_CONSTANT() { return GetToken(JassParser.K_CONSTANT, 0); }
		public NativeFuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nativeFunc; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterNativeFunc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitNativeFunc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNativeFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NativeFuncContext nativeFunc() {
		NativeFuncContext _localctx = new NativeFuncContext(Context, State);
		EnterRule(_localctx, 12, RULE_nativeFunc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_CONSTANT) {
				{
				State = 113; Match(K_CONSTANT);
				}
			}

			State = 116; Match(K_NATIVE);
			State = 117; funcDeclr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDeclrContext : ParserRuleContext {
		public IdContext id() {
			return GetRuleContext<IdContext>(0);
		}
		public ITerminalNode K_TAKES() { return GetToken(JassParser.K_TAKES, 0); }
		public ITerminalNode K_RETURNS() { return GetToken(JassParser.K_RETURNS, 0); }
		public ITerminalNode[] K_NOTHING() { return GetTokens(JassParser.K_NOTHING); }
		public ITerminalNode K_NOTHING(int i) {
			return GetToken(JassParser.K_NOTHING, i);
		}
		public ParamListContext paramList() {
			return GetRuleContext<ParamListContext>(0);
		}
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public FuncDeclrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDeclr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterFuncDeclr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitFuncDeclr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDeclr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDeclrContext funcDeclr() {
		FuncDeclrContext _localctx = new FuncDeclrContext(Context, State);
		EnterRule(_localctx, 14, RULE_funcDeclr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; id();
			State = 120; Match(K_TAKES);
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case K_NOTHING:
				{
				State = 121; Match(K_NOTHING);
				}
				break;
			case K_CODE:
			case K_HANDLE:
			case K_INTEGER:
			case K_REAL:
			case K_BOOLEAN:
			case K_STRING:
			case ID:
				{
				State = 122; paramList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 125; Match(K_RETURNS);
			State = 128;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case K_CODE:
			case K_HANDLE:
			case K_INTEGER:
			case K_REAL:
			case K_BOOLEAN:
			case K_STRING:
			case ID:
				{
				State = 126; type();
				}
				break;
			case K_NOTHING:
				{
				State = 127; Match(K_NOTHING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamListContext : ParserRuleContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public IdContext[] id() {
			return GetRuleContexts<IdContext>();
		}
		public IdContext id(int i) {
			return GetRuleContext<IdContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(JassParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(JassParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paramList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterParamList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitParamList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParamList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamListContext paramList() {
		ParamListContext _localctx = new ParamListContext(Context, State);
		EnterRule(_localctx, 16, RULE_paramList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130; type();
			State = 131; id();
			State = 138;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 132; Match(COMMA);
				State = 133; type();
				State = 134; id();
				}
				}
				State = 140;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncContext : ParserRuleContext {
		public ITerminalNode K_FUNCTION() { return GetToken(JassParser.K_FUNCTION, 0); }
		public FuncDeclrContext funcDeclr() {
			return GetRuleContext<FuncDeclrContext>(0);
		}
		public LocalVarListContext localVarList() {
			return GetRuleContext<LocalVarListContext>(0);
		}
		public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		public ITerminalNode K_ENDFUNCTION() { return GetToken(JassParser.K_ENDFUNCTION, 0); }
		public ITerminalNode K_CONSTANT() { return GetToken(JassParser.K_CONSTANT, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterFunc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitFunc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncContext func() {
		FuncContext _localctx = new FuncContext(Context, State);
		EnterRule(_localctx, 18, RULE_func);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==K_CONSTANT) {
				{
				State = 141; Match(K_CONSTANT);
				}
			}

			State = 144; Match(K_FUNCTION);
			State = 145; funcDeclr();
			State = 146; localVarList();
			State = 147; statementList();
			State = 148; Match(K_ENDFUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalVarListContext : ParserRuleContext {
		public ITerminalNode[] K_LOCAL() { return GetTokens(JassParser.K_LOCAL); }
		public ITerminalNode K_LOCAL(int i) {
			return GetToken(JassParser.K_LOCAL, i);
		}
		public VarDeclrContext[] varDeclr() {
			return GetRuleContexts<VarDeclrContext>();
		}
		public VarDeclrContext varDeclr(int i) {
			return GetRuleContext<VarDeclrContext>(i);
		}
		public LocalVarListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localVarList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.EnterLocalVarList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IJassParserListener typedListener = listener as IJassParserListener;
			if (typedListener != null) typedListener.ExitLocalVarList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJassParserVisitor<TResult> typedVisitor = visitor as IJassParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalVarList(this);
			else return visitor.VisitChildren(this);
		}
	}
